added buttons. Still need to be put in individual relative views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="fpp">FP+</string>
     <string name="fpm">FP-</string>
     <string name="strengthStat">0</string>
+    <string name="hitpointStat">0</string>
+    <string name="dexterityStat">0</string>
+    <string name="willpowerStat">0</string>
 </resources>
