--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="hitpointStat">0</string>
     <string name="dexterityStat">0</string>
     <string name="willpowerStat">0</string>
+    <string name="iqStat">0</string>
 </resources>
