fancy border box & current fphp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="dexterityStat">0</string>
     <string name="willpowerStat">0</string>
     <string name="iqStat">0</string>
+    <string name="currenthpfp">Current</string>
 </resources>
