--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="dungeon">Dungeon</string>
     <string name="randomMonster">Random</string>
     <string name="blankMonster">New</string>
+    <string name="deleteall">Clear All</string>
 </resources>
