I still need to make the monster stats show. can't figure that out...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="blankMonster">New</string>
     <string name="deleteall">Clear All</string>
     <string name="charName">Name: </string>
+    <string name="monstername">Name:</string>
+    <string name="monsterlevel">Level:</string>
 </resources>
