Monster stats are now working!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,8 +49,30 @@
     <string name="dungeon">Dungeon</string>
     <string name="randomMonster">Random</string>
     <string name="blankMonster">New</string>
-    <string name="deleteall">Clear All</string>
+    <string name="deleteall">Clear</string>
     <string name="charName">Name: </string>
     <string name="monstername">Name:</string>
     <string name="monsterlevel">Level:</string>
+    <string name="title_activity_monster_stats">MonsterStats</string>
+    <string name="monsterdescription">Description:</string>
+    <string name="monstertheClass">Class:</string>
+    <string name="monsterst">Strength:</string>
+    <string name="monsterdx">Dexterity:</string>
+    <string name="monsteriq">IQ:</string>
+    <string name="monsterht">HT:</string>
+    <string name="monsterdodge">Dodge:</string>
+    <string name="monsterhp">HP:</string>
+    <string name="monsterwill">Will:</string>
+    <string name="monsterper">Per:</string>
+    <string name="monsterfp">FP:</string>
+    <string name="monsterparry">Parry:</string>
+    <string name="monsterspeed">Speed:</string>
+    <string name="monstermove">Move:</string>
+    <string name="monstersm">SM:</string>
+    <string name="monsterdr">DR:</string>
+    <string name="monsterattacks">Attacks:</string>
+    <string name="monstertraits">Traits:</string>
+    <string name="monsterskills">Skills:</string>
+    <string name="monsternotes">Notes:</string>
+    <string name="update">Update</string>
 </resources>
